2007-08-10  Dan Williams  <dcbw@redhat.com>

	* src/named-manager/nm-named-manager.c
		- (rewrite_resolv_conf): clean up error handling to avoid double-free by
		    not calling fclose() twice on some error conditions

2007-08-08  Dan Williams  <dcbw@redhat.com>

	* src/nm-device-802-11-wireless.[ch]
		- (nm_device_802_11_wireless_get_frequency): reenable

	* src/nm-device-802-11-mesh-olpc.c
		- MPP functionality will only be activated on channels 1, 6, 11
		- Increased DHCP timeout from 15 seconds to 20 seconds

	* src/dhcp-manager/nm-dhcp-manager.c
		- Spawn dhclient with a lease file, and remove that lease file
		after dhclient exists.  Makes DHCP faster because it doesn't
		have to do the initial REQUEST state, and we don't expect the
		machines to be as stationary.
		- Cancelling a DHCP transaction is now synchronous.  There isn't
		any locking, and the cancel can happen from different threads
		but that shouldn't happen.

	* src/nm-device.c
	  src/nm-device-802-11-mesh-olpc.c
		- Updates for synchronous cancel

2007-07-31  Dan Williams  <dcbw@redhat.com>

	* src/nm-device-802-11-wireless.c
		- (supplicant_exec): pass the -f option to the supplicant based
			on the existence of /etc/NetworkManager/log-supplicant
			to log the wpa_supplicant debug output

2007-07-24  Dan Williams  <dcbw@redhat.com>

	* src/nm-device-802-11-mesh-olpc.c
		- Add /etc/NetworkManager/mesh-start which should contain one of:
			"school-mpp", "infra", "xo-mpp", or "local" as a debugging option
			to control what step mesh devices start at
		- Add /etc/NetworkManager/mesh-beacons as a debugging option to control
			whether NM takes advantage of mesh beacons or not

2007-07-20  Dan Williams  <dcbw@redhat.com>

	* src/nm-device-802-11-wireless.c
		- (schedule_scan): change 'seconds' type to gint32 because -1 is
			supposed to mean "default", but this wasn't working correctly
			because 'seconds' was unsigned

2007-07-13  Dan Williams  <dcbw@redhat.com>

	* src/nm-device-802-11-mesh-olpc.c